<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Disp07">
    <TextView
            android:text="@string/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtQuestion" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp" android:textSize="36sp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.316"/>
    <TextView
            android:text="@string/txtAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txtAnswer" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtQuestion" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp" android:textSize="36sp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.451"/>
    <Button
            android:id="@+id/btnBack"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:onClick="tap_btnBack" android:text="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/btnNext"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:onClick="tap_btnNext"
            android:text="@string/btnNext" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChange" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:onClick="tap_btnChange"/>
    <Button
            android:text="@string/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnHome" android:onClick="tap_btnHome"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete"/>
    <Button
            android:text="@string/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnChange"
            android:onClick="tap_btnDelete"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/txtListName" android:textSize="36sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>